full oauth token support (#447)
* initial cred client

* remove dup cred_rest_client

* fix container build

* bump to condor 25

* complete bump to condor 25

* make sure new handlers are added to git

* website should now work for new submission process

* <bot> update pyproject.toml

* fix flake8 and mypy

* fix task stats bulk test

* fix python 3.14 test

* ast.Num was replaced by ast.Constant

* remove gridftp code from Dockerfile

* finish plumbing for tokens

* remove python 3.11 support

* <bot> update pyproject.toml

* update docs build

* there is a bug in sphinx 9.x, so stay on 8.x

* <bot> update pyproject.toml

* better logging of submit success

* fix token str vs bytes

* fix mypy

* remove adding credentials in profile

* fix scratch token

* flake8

* fix mypy

* make submit less complex

* change container cvmfs dest dir

---------

Co-authored-by: github-actions <github-actions@github.com>

--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -74,8 +74,8 @@ jobs:
       - uses: WIPACrepo/wipac-dev-py-setup-action@v5.7
         with:
           mode: PACKAGING_AND_PYPI
-          python_min: 3.11
-          python_max: 3.13
+          python_min: 3.12
+          python_max: 3.14
           pypi_name: iceprod
           author: WIPAC Developers
           author_email: developers@icecube.wisc.edu
@@ -222,7 +222,7 @@ jobs:
       image_namespace: wipacrepo
       image_name: iceprod
       mode: CVMFS_BUILD
-      cvmfs_dest_dir: "iceprod"
+      cvmfs_dest_dir: "iceprod/wipacrepo"
       build_args: |
         SETUPTOOLS_SCM_PRETEND_VERSION=${{ needs.release-version.outputs.next-version }}
       extra_build_tag: ${{ needs.release-version.outputs.next-version }}
