--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -224,7 +224,7 @@ jobs:
       mode: CVMFS_BUILD
       cvmfs_dest_dir: "iceprod/wipacrepo"
       build_args: |
-        SETUPTOOLS_SCM_PRETEND_VERSION=${{ needs.release-version.outputs.next-version }}
+        VERSION=${{ needs.release-version.outputs.next-version }}
       extra_build_tag: ${{ needs.release-version.outputs.next-version }}
     secrets:
       cvmfs_github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
