convert from motor to pymongo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,9 @@ dependencies = [
     'httpx',
     'jsonschema',
     'ldap3',
-    'motor',
     'prometheus-client',
     'psutil',
-    'pymongo',
+    'pymongo>=4.13',
     'python-dateutil',
     'requests',
     'requests-futures',
