--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -113,7 +113,7 @@ jobs:
         run: |
           docker run --rm -d --name mongo --network=host mongo:8 --replSet rs0 --bind_ip_all --port 27017
           sleep 1
-          docker run --rm -it --network=host --entrypoint mongosh mongo:8 --eval "rs.initiate().ok"
+          docker run --rm --network=host --entrypoint mongosh mongo:8 --eval "rs.initiate().ok"
           sleep 1
       - uses: actions/checkout@v6
         with:
